--- a/locales/de.json
+++ b/locales/de.json
@@ -2,5 +2,6 @@
   "HEADER": "Gib deine E-Mail Adresse an, um %s auf Slack beizutreten!",
   "ENTER_EMAIL": "Deine E-Mail Adresse",
   "ENTER_TOKEN": "Gib deinen Zugangscode an",
-  "TITLE": "Tritt %s auf Slack bei!"
+  "TITLE": "Tritt %s auf Slack bei!",
+  "APPROVE": "Drucken Sie die Taste, um %s Ihre Gemeinschaft auf Slack beitreten zu lassen"
 }
